--- a/healthbase/templates/encomendar_indicadores.html
+++ b/healthbase/templates/encomendar_indicadores.html
@@ -1,48 +1,102 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="stylesheet" href="style_minha_conta.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Encomendar Indicadores</title>
+    <title>Healthbase - Encomendar indicadores</title>
     <style>
-        /* Estilos para a barra azul no canto esquerdo */
-        .sidebar {
-            background-color: #002D74;
-            color: #ffffff;
-            width: 200px;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: "K2D";
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px;
         }
 
-        .sidebar a {
-            color: #ffffff;
+        nav {
+            width: 350px;
+            height: 100vh; /* Alterado para ocupar 100% da altura da janela de visualização */
+            background-color: #154BA8;
+            padding: 25px;
+            display: flex;
+            flex-direction: column; /* Empilha os links verticalmente */
+        }
+
+        nav a {
+            background-color: #093985;
+            border: 1px;
+            border-radius: 6px;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
             text-decoration: none;
-            margin-bottom: 20px;
+            margin-bottom: 20px; /* Espaçamento entre os links */
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
 
-        /* Estilos para o conteúdo da página */
+        nav a:hover {
+            background-color: #1957B9; 
+        }
+
+        main {
+            margin: 5;
+            flex: 1; /* Ocupa todo o espaço restante */
+            padding: 0px;
+            margin-left: 20px; /* Largura do painel lateral */
+        }
+
+        main h1 {
+            color: #002D74
+        }
+
         .content {
-            margin-left: 220px; /* Espaço para a barra lateral */
-            padding: 20px;
+            margin-left: 5px; /* Adicionado para margem no conteúdo à direita */
+        }
+
+        main p{
+            
+            color: #002D74
+        }
+        .a {
+            background-color: #093985;
+            border: 1px;
+            border-radius: 6px;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+            text-decoration: none;
+            margin-bottom: 20px; /* Espaçamento entre os links */
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
     </style>
+
 </head>
 <body>
-    <div class="sidebar">
-        <h1>Bem-vindo, usuário {{ nome }}!</h1>
+    <nav>
+        <div style="display: flex; align-items: center;">
+            <img src="{% static 'IconeSoftware.svg' %}" width="87" height="87" alt="Ícone de Software">
+            <h1 style="color: white; font-size: 45px; margin-left: 20px;">HealthBase</h1>
+        </div>
+        <h3 style="color: white;">Bem-vindo, usuário {{ nome }}!</h3>
         <a href="{% url 'menu' %}">Catálogo</a>
-        <a href="{% url 'conta' %}">Conta</a>
+        <a href="{% url 'conta' %}">Minha Conta</a>
         <a href="{% url 'encomendar_indicadores' %}">Encomenda de Indicadores</a>
         <a href="{% url 'visualizar_cobrancas' %}">Billing</a>
         <a href="{% url 'home' %}">Logout</a>
-    </div>
+        <div style="margin-top:290px;color:white;">
+            © 2024 HealthBase<br>
+            <img src="{% static 'bandeira.png' %}" alt="bandeira">
+        </div>
+    </nav>
+    <main>
     <div class="content">
         <h1>Encomendar Indicadores</h1>
         <form method="post">
@@ -50,9 +104,10 @@
             <label for="descricao">Descreva em detalhes os indicadores que deseja encomendar:</label>
             <br>
             <textarea id="descricao" name="descricao" rows="10" cols="50" maxlength="1000"></textarea>
-            <br>
-            <input type="submit" value="Enviar">
+            <br><br><br>
+            <input type="submit" class="a" value="Enviar">
         </form>
     </div>
+    </main>
 </body>
 </html>
