--- a/healthbase/templates/modificarcartao.html
+++ b/healthbase/templates/modificarcartao.html
@@ -1,71 +1,131 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
+    <link rel="stylesheet" href="style_alterar_cartao.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minha Conta</title>
+    <title>Healthbase - Alterar cartão</title>
     <style>
-        /* Estilos para a barra azul no canto esquerdo */
-        .sidebar {
-            background-color: #002D74;
-            color: #ffffff;
-            width: 200px;
-            height: 100vh;
-            position: fixed;
-            top: 0;
-            left: 0;
+        body, html {
+            margin: 0;
+            padding: 0;
+            font-family: "K2D";
             display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: space-between;
-            padding: 20px;
         }
 
-        .sidebar a {
-            color: #ffffff;
+        nav {
+            width: 350px;
+            height: 100vh; /* Alterado para ocupar 100% da altura da janela de visualização */
+            background-color: #154BA8;
+            padding: 25px;
+            display: flex;
+            flex-direction: column; /* Empilha os links verticalmente */
+        }
+
+        nav a {
+            background-color: #093985;
+            border: 1px;
+            border-radius: 6px;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
             text-decoration: none;
-            margin-bottom: 20px;
+            margin-bottom: 20px; /* Espaçamento entre os links */
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
         }
 
-        /* Estilos para o conteúdo da página */
-        .content {
-            margin-left: 220px; /* Espaço para a barra lateral */
+        nav a:hover {
+            background-color: #1957B9; 
+        }
+
+        main {
+            flex: 1; /* Ocupa todo o espaço restante */
             padding: 20px;
+            margin-left: 20px; /* Largura do painel lateral */
         }
 
-        /* Estilos para o formulário */
+        main h1 {
+            color: #002D74;
+        }
+
+        main p {
+            color: #002D74;
+        }
+        main a {
+            background-color: #093985;
+            border: 1px;
+            border-radius: 6px;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+            text-decoration: none;
+            margin-bottom: 20px; /* Espaçamento entre os links */
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
         .form-container {
             margin-top: 20px; /* Espaço entre a barra lateral e o formulário */
         }
+        .a {
+            background-color: #093985;
+            border: 1px;
+            border-radius: 6px;
+            color: white;
+            padding: 15px 20px;
+            text-align: center;
+            text-decoration: none;
+            margin-bottom: 20px; /* Espaçamento entre os links */
+            font-size: 16px;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
     </style>
 </head>
-<body>  
-    <div class="sidebar">
-        <h1>Bem-vindo, usuário {{ nome }}!</h1>
+<body>
+    <nav>
+        <div style="display: flex; align-items: center;">
+            <img src="{% static 'IconeSoftware.svg' %}" width="87" height="87" alt="Ícone de Software">
+            <h1 style="color: white; font-size: 45px; margin-left: 20px;">HealthBase</h1>
+        </div>
+        <h3 style="color: white;">Bem-vindo, usuário {{ nome }}!</h3>
         <a href="{% url 'menu' %}">Catálogo</a>
-        <a href="{% url 'conta' %}">Conta</a>
+        <a href="{% url 'conta' %}">Minha Conta</a>
         <a href="{% url 'encomendar_indicadores' %}">Encomenda de Indicadores</a>
         <a href="{% url 'visualizar_cobrancas' %}">Billing</a>
         <a href="{% url 'home' %}">Logout</a>
-    </div>
-    <div class="content">
+        <div style="margin-top:290px;color:white;">
+            © 2024 HealthBase<br>
+            <img src="{% static 'bandeira.png' %}" alt="bandeira">
+        </div>
+    </nav>
+    <main>
         <h1>Alterar Cartão</h1>
         <!-- Bloco para exibir a mensagem de erro -->
         {% if error %}
         <p style="color: red;">{{ error }}</p>
         {% endif %}
-        <form method="post">
-            {% csrf_token %}
-            <label for="numCartao">Número do Cartão:</label>
-            <input type="text" id="numCartao" name="numCartao" required><br>        
-            <label for="nome">Nome Mostrado no Cartão:</label>
-            <input type="text" id="nomeCartao" name="nomeCartao" required><br>
-            <label for="cvv">CVV:</label>
-            <input type="text" id="cvv" name="cvv" required><br>
-            <label for="val_cartao">Validade do Cartão:</label>
-            <input type="date" id="val_cartao" name="val_cartao" required><br>
-            <button type="submit">Atualizar</button>
-        </form>
-    </div>
+        <div class="form-container">
+            <form method="post">
+                {% csrf_token %}
+                <label for="numCartao">Número do cartão</label><br>
+                <input type="text" id="numCartao" name="numCartao" required><br><br>
+                <label for="nomeCartao">Nome mostrado no cartão</label><br>
+                <input type="text" id="nomeCartao" name="nomeCartao" required><br><br>
+                <label for="cvv">cvv</label><br>
+                <input type="text" id="cvv" name="cvv" required><br><br>
+                <label for="val_cartao">Validade do cartão</label><br>
+                <input type="date" id="val_cartao" name="val_cartao" required><br><br><br>
+                <button type="submit" class="a">Atualizar</button>
+            </form>
+        </div>
+    </main>
 </body>
 </html>
